# qmdiff

./: README.md  diff-manuscript.sh  manuscript-v1.qmd  manuscript-v2-diff.docx  preprocess-criticmarkup.py  pyproject.toml
.github/workflows/: ci.yml
examples/: example-v1.qmd  example-v2.qmd  manuscript-v2.qmd  references.bib
src/qmdiff/: __init__.py  cli.py  criticmarkup.py  deps.py  differ.py  frontmatter.py  git.py  pipeline.py
src/qmdiff/filters/: diff-highlight.lua
tests/: conftest.py  test_cli.py  test_criticmarkup.py  test_deps.py  test_differ.py  test_frontmatter.py  test_git.py  test_pipeline.py
